refactor : 중복 로직 private 헬퍼 메서드로 추출